Kubernets-files/Deployment_flaskapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: 146396578791.dkr.ecr.us-east-1.amazonaws.com/task-ecr-repo:flask-app
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:   # Add resource limits here
            limits:
              cpu: "0.5"   # Specify the CPU limit (e.g., 0.5 CPU core)
              memory: "512Mi"   # Specify the memory limit (e.g., 512 MiB)
            requests:
              cpu: "0.1"   # Specify the CPU request (e.g., 0.1 CPU core)
              memory: "128Mi"   # Specify the memory request (e.g., 128 MiB)
          # env:
          #   - name: MYSQL_DATABASE_USER
          #     valueFrom:
          #       configMapKeyRef:
          #         name: flask-app-config
          #         key: MYSQL_DATABASE_USER
          #   - name: MYSQL_DATABASE_DB
          #     valueFrom:
          #       configMapKeyRef:
          #         name: flask-app-config
          #         key: MYSQL_DATABASE_DB
          #   - name: MYSQL_DATABASE_HOST
          #     valueFrom:
          #       configMapKeyRef:
          #         name: flask-app-config
          #         key: MYSQL_DATABASE_HOST
          #   - name: MYSQL_DATABASE_PASSWORD
          #     valueFrom:
          #       secretKeyRef:
          #         name: app-secrets
          #         key: MYSQL_DATABASE_PASSWORD
