Kubernets-files/Statefulset_db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-statefulset
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  serviceName: mysql-service
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: 146396578791.dkr.ecr.us-east-1.amazonaws.com/task-ecr-repo:db
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data-volume
              mountPath: /var/lib/mysql
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: mypvc
